<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RetailApp</string>
    <string name="app_title">Retail App</string>
    <string name="app_welcome_msg">Welcome,
                                   Sign up for free
                                   and start to enjoy our app.</string>
    <string name="app_label_sign_in">Sign In</string>
    <string name="app_label_sign_out">Sign Out</string>
    <string name="app_label_sign_up">Create Account</string>
    <string name="app_label_or">Or</string>
    <string name="app_label_name">Name</string>
    <string name="app_label_email">Email</string>
    <string name="app_label_password">Password</string>
    <string name="app_label_profile">Profile</string>
    <string name="app_label_address">Address</string>
    <string name="app_label_phone">Phone</string>
    <string name="app_label_browse">Browse</string>
    <string name="app_label_browse_store">Browse Store</string>
    <string name="app_label_browse_category">Browse Category</string>
    <string name="app_label_browse_product">Browse Product</string>
    <string name="app_label_user_name">User Name Example</string>
    <string name="app_label_user_email">username@domain.com</string>
    <string name="app_label_user_password">********</string>
    <string name="app_label_user_address">123 July Street</string>
    <string name="app_label_user_phone">+1 555 1234-5678</string>
    <string name="app_label_SignIn_with_in_with_facebook">Sign In with Facebook</string>
    <string name="app_label_SignUp_with_in_with_facebook">Sign Up with Facebook</string>
    <string name="app_label_facebook">Facebook</string>
    <string name="app_label_user_facebook">facebook.com/username</string>
    <string name="app_label_browse_store_name">Suzan Store</string>
    <string name="app_label_browse_store_address">123 Suzan Street, Mountain View, CA</string>
    <string name="app_label_browse_store_distance">1.5 mi</string>
    <string name="app_label_browse_store_title">Special Day - City</string>
    <string name="app_label_browse_store_msg">Check what is happening in your city today.
                                              You can win a price here.</string>
    <string name="app_label_browse_store_choose_store">Choose a store in 94041</string>
    <string name="app_label_browse_store_change_zip">Change ZIP</string>
    <string name="app_label_browse_category_title">Special Day - Store</string>
    <string name="app_label_browse_category_msg">Check what is happening in this store today.
                                              You can win a price here.</string>
    <string name="app_label_browse_product_title">Special Day - Category</string>
    <string name="app_label_browse_product_msg">Check the promotions for this category today.
                                              You can win a price here.</string>
    <string name="app_label_rewards_congratulations">Congratulations</string>
    <string name="app_label_rewards_achievement_unlocked">Achievement Unlocked!</string>
    <string name="app_label_rewards_purchase_msg">When you register a purchase you win Purchase points!</string>
    <string name="app_label_rewards_walk_in_msg">When walk in for the first
                                                 time in the day
                                                 you win a Walk In Achiement!</string>
    <string name="app_label_rewards_scanning_msg">When you scan a product that
                                                  is available in the scanning list
                                                  you receive a Scanning Achiement!</string>
    <string name="app_button_reward_ok">Ok</string>
    <string name="app_purchase_title">Purchase</string>
    <string name="app_purchase_add_all_to_cart">Add all to cart</string>
    <string name="app_purchase_history_title">Purchases</string>
    <string name="app_reward_balance_title">Reward Balance</string>
    <string name="app_button_product_add_to_cart">Add to cart</string>
    <string name="app_button_plus">+</string>
    <string name="app_button_minus">-</string>
    <string name="app_label_product_preview_description">Haagen Daz Chocolate</string>
    <string name="app_label_product_preview_category">Icecream</string>
    <string name="app_label_product_preview_brand">Haagen Daz</string>
    <string name="app_label_product_preview_unit">each</string>
    <string name="app_label_product_preview_unit_value">$ 2.99</string>
    <string name="app_label_product_preview_quantity">Quantity</string>
    <string name="app_label_product_preview_quantity_value">10.00</string>
    <string name="app_label_product_preview_total_amount">Total amount</string>
    <string name="app_label_product_preview_total_amount_value">$ 29.90</string>
    <string name="app_label_related_items">Related itens</string>
    <string name="app_label_help">Help</string>
    <string name="app_label_walk_in">Walk in</string>
    <string name="app_label_scan_product">Scan product</string>
    <string name="app_label_purchase">Purchase</string>
    <string name="app_label_walk_in_reward_notify">Walk in Notify</string>
    <string name="app_label_scan_product_reward_notify">Scan product Notify</string>
    <string name="app_label_purchase_reward_notify">Purchase Notify</string>
    <string name="app_label_purchase_add">Purchase Add</string>
    <string name="app_label_purchase_browse">Browse Purchase</string>
    <string name="app_label_purchase_detail">Purchase detail</string>
    <string name="app_label_achievement">Achievement</string>
    <string name="app_label_reward_balance">Reward balance</string>
    <string name="app_label_product_detail">Product detail</string>
    <string name="app_label_product_detail_amount">1</string>
    <string name="app_label_date_label">Date</string>
    <string name="app_label_date_value">11/30/2015</string>
    <string name="app_label_total_amount">$ 175.00</string>
    <string name="app_label_total_quantity">4 items</string>
    <string name="app_purchase_history_add">Add</string>
    <string name="app_purchase_add_manually">Add Manually</string>
    <string name="app_label_store">Store</string>
    <string name="app_label_product">Product</string>
    <string name="app_label_user">User</string>
    <string name="app_label_category">Category</string>
    <string name="app_label_dollar">$</string>
    <string name="app_album_name">AppRetailPictures</string>
    <string name="app_label_reward">Reward</string>
    <string name="app_label_available">Available</string>
    <string name="app_label_unavailable">Unavailable</string>
    <string name="app_label_reward_description">Reward that can be redeemed</string>
    <string name="app_label_permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="app_label_no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="app_label_low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="app_label_barcode">Barcode</string>
    <string name="app_label_barcode_format">Barcode format</string>
    <string name="app_label_barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="app_label_read_barcode">Read Barcode</string>
    <string name="app_label_auto_focus">Auto Focus</string>
    <string name="app_label_use_flash">Use Flash</string>
    <string name="app_label_barcode_success">Barcode read successfully</string>
    <string name="app_label_barcode_failure">No barcode captured</string>
    <string name="app_label_barcode_error">"Error reading barcode: %1$s"</string>
</resources>