<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:text="@string/app_label_date_value"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@style/smallLabelLight"
        android:layout_weight="1"
        android:gravity="center|top"
        android:id="@+id/purchase_history_date"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight=".6">
        <TextView android:text="@string/app_label_browse_store_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/smallLabelLight"
            android:layout_weight="1"
            android:gravity="left"
            android:id="@+id/purchase_history_store_name"/>
        <TextView android:text="@string/app_label_browse_store_address"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/smallLabelDisabled"
            android:layout_weight="1"
            android:gravity="left"
            android:id="@+id/purchase_history_store_address"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.1">
        <TextView android:text="@string/app_label_total_amount"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/smallLabelLight"
            android:layout_weight="1"
            android:gravity="right"
            android:id="@+id/purchase_history_total_amount"/>
        <TextView android:text="@string/app_label_total_quantity"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/smallLabelLight"
            android:layout_weight="1"
            android:gravity="right"
            android:id="@+id/purchase_history_total_quantity"/>
    </LinearLayout>

</LinearLayout>