<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".WalkInRewardNotifyActivity"
    android:orientation="vertical"
    style="@style/linearLayoutLight">

    <LinearLayout
        style="@style/headerTitle">
        <TextView android:text="@string/app_label_rewards_congratulations"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/largeLabelReward"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView android:text="@string/app_label_rewards_achievement_unlocked"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/mediumLabelDisabled"
            android:gravity="center"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight=".8">
            <ImageView
                android:layout_width="@dimen/product_preview_width"
                android:layout_height="@dimen/product_preview_height"
                android:gravity="center"
                android:layout_weight=".8"
                android:src="@drawable/circle_reward_notify" />
            <TextView android:text="@string/app_label_walk_in"
                android:layout_width="@dimen/product_preview_width"
                android:layout_height="@dimen/product_preview_height"
                style="@style/mediumLabelDark"
                android:gravity="center"/>
        </RelativeLayout>
        <TextView android:text="@string/app_label_rewards_walk_in_msg"
            android:id="@+id/labelFacebookSignIn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/smallLabelLight"
            android:gravity="center"
            android:layout_weight="1"/>
        <Button
            style="@style/largeButtonReward"
            android:layout_width="fill_parent"
            android:text="@string/app_button_reward_ok"
            android:id="@+id/buttonRewardWalkInOk"/>
    </LinearLayout>

</LinearLayout>
