<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.totvs.retailapp.UserProfileActivity"
    android:orientation="vertical"
    style="@style/linearLayoutLight">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4">
        <TextView android:text="@string/app_label_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/largeLabelLight"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:src="@drawable/random_user_pic_79" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView android:text="@string/app_label_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="left|center"
                android:layout_weight="1"/>
            <TextView android:text="@string/app_label_user_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="right|center"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView android:text="@string/app_label_address"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="left|center"
                android:layout_weight="1"/>
            <TextView android:text="@string/app_label_address_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="right|center"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            style="@style/linearLayoutDisabled"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView android:text="@string/app_label_email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="left|center"
                android:layout_weight="1"/>
            <TextView android:text="@string/app_label_user_email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="right|center"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView android:text="@string/app_label_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="left|center"
                android:layout_weight="1"/>
            <TextView android:text="@string/app_label_user_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/smallLabelLight"
                android:gravity="right|center"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            style="@style/linearLayoutDisabled"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                style="@style/largeButtonFacebook"
                android:id="@+id/buttonFacebookSignUp"
                android:gravity="left|center"
                android:layout_weight="1"
                android:src="@drawable/facebook_logo" />
            <TextView android:text="@string/app_label_facebook"
                android:layout_width="fill_parent"
                android:id="@+id/labelFacebookConnect"
                style="@style/smallButtonLight"
                android:gravity="left|center"
                android:layout_weight="1"/>
            <Switch
                style="@style/mediumButtonLight"
                android:layout_width="fill_parent"
                android:id="@+id/switchFacebookConnect"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
