<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PurchaseRewardNotifyActivity"
    android:orientation="vertical"
    style="@style/linearLayoutLight">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView android:text="@string/app_label_rewards_congratulations"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/largeLabelReward"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView android:text="@string/app_label_rewards_achievement_unlocked"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/mediumLabelDisabled"
            android:gravity="center"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="left|center"
            android:layout_weight=".8"
            android:src="@drawable/reward_purchase_icon" />
        <TextView android:text="@string/app_label_rewards_purchase_msg"
            android:id="@+id/labelFacebookSignIn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/smallLabelLight"
            android:gravity="center"
            android:layout_weight="1"/>
        <Button
            style="@style/largeButtonReward"
            android:layout_width="fill_parent"
            android:text="@string/app_button_reward_ok"
            android:id="@+id/buttonRewardPurchaseOk"/>
    </LinearLayout>

</LinearLayout>
